<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2018 Google LLC.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">tAReign</string>
    <string name="floor">Floor</string>
    <string name="wall">Wall</string>
    <string name="tree">Tree</string>
    <string name="barrel">Barrel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tareign">tAReign</string>
    <string name="build_your_own_terrain_and_project_onto_a_flat_surface">Build your own terrain and project onto a flat surface</string>
    <string name="create_a_new_grid">Create a new grid</string>
    <string name="load_an_old_grid">Load an old grid</string>
    <string name="save">Save!</string>
    <string name="go_to_ar">Augment Your Reality!</string>
</resources>
