<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ar.sceneform.samples.hellosceneform.GridActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center"
    >
    <GridView
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:numColumns="10"
        android:layout_weight="0.41"
        android:layout_marginTop="20dp"
        >
    </GridView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/floorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/floor"
            />
        <Button
            android:id="@+id/wallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/wall"
            />
        <Button
            android:id="@+id/treeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/tree"
            />
        <Button
            android:id="@+id/barrelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/barrel"
            />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        >
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/renderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_ar"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
</LinearLayout>
